--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "message",
-  "version": "0.1.0",
-  "private": true,
+  "name": "test-component-liu",
+  "version": "0.7.0",
+  "private": false,
+  "author":"caixia",
+  "main": "./lib/my-test.umd.min.js",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "lib": "vue-cli-service build --target lib --name my-test --dest lib src/index.js"
   },
   "dependencies": {
     "core-js": "^2.6.5",
